--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^52.2.5",
+    "@slidev/cli": "^52.1.0",
+    "@slidev/theme-apple-basic": "^0.25.1",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
-    "vue": "^3.5.22"
+    "vue": "^3.5.18"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.40.0"
   }
 }
