--- a/slides.md.template
+++ b/slides.md.template
@@ -4,6 +4,7 @@ title: Welcome to Slidev
 fonts:
   # basically the text
   sans: Prompt
+layout: center
 ---
 
 # Looping through Lists
@@ -354,3 +355,75 @@ int total = scores[0] + scores[1] + scores[2];
 printf("Total score: %d\n", total);
 ```
 ````
+
+---
+layout: center
+---
+
+# ตัวอย่างเพิ่มเติม: Slide Patterns ที่ใช้บ่อย
+
+---
+layout: center
+---
+
+# 🎨 Pattern 1: Slide เปิดเรื่องพร้อม GIF
+
+ข้อความเปิดเรื่องหรือคำอธิบาย...
+
+<div style="display: flex; justify-content: center; align-items: center; margin-top: 30px;">
+<img src="YOUR_GIF_URL_HERE" alt="Description" style="max-width: 50%; height: auto;">
+</div>
+
+---
+layout: center
+---
+
+# 🎨 Pattern 2: แสดงตัวอย่างพร้อมโลโก้
+
+## 📱 ชื่อตัวอย่าง
+
+คำอธิบายสั้นๆ เกี่ยวกับตัวอย่างนี้  
+สามารถขึ้นบรรทัดใหม่ได้
+
+<div style="display: flex; justify-content: center; align-items: center; margin-top: 30px;">
+<img src="YOUR_LOGO_URL_HERE" alt="Logo" style="max-width: 200px; height: auto;">
+</div>
+
+---
+layout: center
+---
+
+# 🎨 Pattern 3: ตารางเปรียบเทียบ
+
+|  | คอลัมน์ 1 | คอลัมน์ 2 | คอลัมน์ 3 |
+|---|---|---|---|
+| **แถว 1** | ข้อมูล A | ข้อมูล B | ข้อมูล C |
+| **แถว 2** | ข้อมูล D | ข้อมูล E | ข้อมูล F |
+| **แถว 3** | ข้อมูล G | ข้อมูล H | ข้อมูล I |
+
+---
+layout: center
+---
+
+# 🎨 Pattern 4: Slide พร้อม v-click หลายข้อ (จัดกลาง)
+
+<v-click>
+
+## 📌 จุดที่ 1
+คำอธิบายจุดที่ 1
+
+</v-click>
+
+<v-click>
+
+## 📌 จุดที่ 2
+คำอธิบายจุดที่ 2
+
+</v-click>
+
+<v-click>
+
+## 📌 จุดที่ 3
+คำอธิบายจุดที่ 3
+
+</v-click>
